; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_queue_drain.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_content_filter.c_cfil_queue_drain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfil_queue = type { i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.cfil_queue*)* @cfil_queue_drain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cfil_queue_drain(%struct.cfil_queue* %0) #0 {
  %2 = alloca %struct.cfil_queue*, align 8
  %3 = alloca i64, align 8
  store %struct.cfil_queue* %0, %struct.cfil_queue** %2, align 8
  %4 = load %struct.cfil_queue*, %struct.cfil_queue** %2, align 8
  %5 = getelementptr inbounds %struct.cfil_queue, %struct.cfil_queue* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = load %struct.cfil_queue*, %struct.cfil_queue** %2, align 8
  %8 = getelementptr inbounds %struct.cfil_queue, %struct.cfil_queue* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = sub nsw i64 %6, %9
  store i64 %10, i64* %3, align 8
  %11 = load %struct.cfil_queue*, %struct.cfil_queue** %2, align 8
  %12 = getelementptr inbounds %struct.cfil_queue, %struct.cfil_queue* %11, i32 0, i32 2
  store i64 0, i64* %12, align 8
  %13 = load %struct.cfil_queue*, %struct.cfil_queue** %2, align 8
  %14 = getelementptr inbounds %struct.cfil_queue, %struct.cfil_queue* %13, i32 0, i32 1
  store i64 0, i64* %14, align 8
  %15 = load %struct.cfil_queue*, %struct.cfil_queue** %2, align 8
  %16 = getelementptr inbounds %struct.cfil_queue, %struct.cfil_queue* %15, i32 0, i32 0
  %17 = call i32 @MBUFQ_DRAIN(i32* %16)
  %18 = load i64, i64* %3, align 8
  ret i64 %18
}

declare dso_local i32 @MBUFQ_DRAIN(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
